--- a/contenido/pag23.html
+++ b/contenido/pag23.html
@@ -129,7 +129,7 @@
                 <a class="btnImagen" href="#gafi">
                     <div class="imagen">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag23/gafi.svg" alt="">
+                            <img id="img-GAFI" src="./build/img/contenido/Pag23/gafi.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -143,7 +143,7 @@
                 <a class="btnImagen" href="#shcp">
                     <div class="imagen">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag23/shcp.svg" alt="">
+                            <img id="img-SHPC" src="./build/img/contenido/Pag23/shcp.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -157,7 +157,7 @@
                 <a class="btnImagen" href="#uif">
                     <div class="imagen">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag23/uif.svg" alt="">
+                            <img id="img-UIF" src="./build/img/contenido/Pag23/uif.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -171,7 +171,7 @@
                 <a class="btnImagen" href="#cnsf">
                     <div class="imagen">
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag23/cnsf.svg" alt="">
+                            <img id="img-CNSF" src="./build/img/contenido/Pag23/cnsf.svg" alt="">
                         </figure>
                     </div>
                 </a>
