correcion de maletines pag20

--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -250,53 +250,61 @@
                     </p>
                 </div>
             </div>
-            <div class="maletin" id="maletin-amarillo">
-                <a href="javascript:mostrarAmarillo()">
-                    <figure class="i-maletin">
-                        <img src="./build/img/contenido/Pag20/maletin-amarillo.svg" alt="maletin amarillo">
-                    </figure>
-                </a>
-                <div class="mensajeSem" id="mAmarillo">
-                    <p>
-                        Son delitos financieros que tienen consecuencias económicas.
-                    </p>     
-                </div>        
-            </div>
-            <div class="maletin" id="maletin-verde">
-                <a href="javascript:mostrarVerde()">
-                    <figure class="i-maletin">
-                        <img src="./build/img/contenido/Pag20/maletin-verde.svg" alt="maletin verde">
-                    </figure>
-                </a>
-                <div class="mensajeSem" id="mVerde">
-                    <p>
-                        Pueden amenazar su estabilidad del sector financiero de un país.
-                    </p>  
-                </div>           
-            </div>
-            <div class="maletin" id="maletin-azul">
-                <a href="javascript:mostrarAzul()">
-                    <figure class="i-maletin">
-                        <img src="./build/img/contenido/Pag20/maletin-azul.svg" alt="maletin azul">
-                    </figure>
-                </a>
-                <div class="mensajeSem" id="mAzul">
-                    <p>
-                        La prevención es esencial para salvaguardar la integridad de los mercados y del marco financiero mundial.
-                    </p> 
-                </div>            
-            </div>
-            <div class="maletin" id="maletin-rojo">
-                <a href="javascript:mostrarRojo()">
-                    <figure class="i-maletin">
-                        <img src="/build/img/contenido/Pag20/maletin-rojo.svg" alt="maletin rojo">
-                    </figure>
-                </a>
-                <div class="mensajeSem" id="mRojo">
-                    <p>
-                        Propician el anonimato y la falta de transparencia en sus transacciones.
-                    </p>
-                </div>             
+            <div class="contenedorFinalPag20">
+                <div class="conjuntoMaletin">
+                    <div class="maletin" id="maletin-amarillo">
+                        <a href="javascript:mostrarAmarillo()">
+                            <figure class="i-maletin">
+                                <img src="./build/img/contenido/Pag20/maletin-amarillo.svg" alt="maletin amarillo">
+                            </figure>
+                        </a>       
+                    </div>
+                    <div class="maletin" id="maletin-verde">
+                        <a href="javascript:mostrarVerde()">
+                            <figure class="i-maletin">
+                                <img src="./build/img/contenido/Pag20/maletin-verde.svg" alt="maletin verde">
+                            </figure>
+                        </a>
+                                 
+                    </div>
+                    <div class="maletin" id="maletin-azul">
+                        <a href="javascript:mostrarAzul()">
+                            <figure class="i-maletin">
+                                <img src="./build/img/contenido/Pag20/maletin-azul.svg" alt="maletin azul">
+                            </figure>
+                        </a>
+                                
+                    </div>
+                    <div class="maletin" id="maletin-rojo">
+                        <a href="javascript:mostrarRojo()">
+                            <figure class="i-maletin">
+                                <img src="/build/img/contenido/Pag20/maletin-rojo.svg" alt="maletin rojo">
+                            </figure>
+                        </a>           
+                    </div>
+                </div>
+                <div class="conjuntoTexto">
+                    <div class="mensajeSem" id="msj1">
+                        <p id="mAmarillo">
+                            Son delitos financieros que tienen consecuencias económicas.
+                        </p>     
+                    </div> 
+                    <div class="mensajeSem" id="msj2">
+                        <p id="mVerde">
+                            Pueden amenazar su estabilidad del sector financiero de un país.
+                        </p>  
+                    </div>  
+                    <div class="mensajeSem" id="msj3">
+                        <p id="mAzul">
+                            La prevención es esencial para salvaguardar la integridad de los mercados y del marco financiero mundial.
+                        </p> 
+                    </div>
+                    <div class="mensajeSem" id="msj4">
+                        <p id="mRojo">
+                            Propician el anonimato y la falta de transparencia en sus transacciones.
+                        </p>
+                    </div>    
+                </div>
             </div>
         </div>
     </div>
