:sparkles: Actividad Relacionar

--- a/contenido/pag21.html
+++ b/contenido/pag21.html
@@ -67,8 +67,12 @@
                 </div>
             </div>
 
-            <div class="canvas">
-
+            <div class="cont-canvas">
+                <canvas class="canvas" id="canvas1"></canvas>
+                <canvas class="canvas" id="canvas2"></canvas>
+                <canvas class="canvas" id="canvas3"></canvas>
+                <canvas class="canvas" id="canvas4"></canvas>
+                <canvas class="canvas" id="canvas5"></canvas>
             </div>
 
             <div class="cont-conceptos">
