:wrench: Responsive pag19

--- a/contenido/pag18.html
+++ b/contenido/pag18.html
@@ -9,15 +9,20 @@
 <body>
 
     <div id="intro-cuestionario">
-        <div class="cont-imagen">
-            <img src="/build/img/contenido/Pag18/persona1.svg" alt="persona">
-        </div>
-        <div class="parrafo">
-            <p>¡Has terminado la primera parte de tu curso PLD!  Veamos cuánto aprendiste. Lee con cuidado cada enunciado que se te presentará y elige si es VERDADERO o FALSO. Si estás listo da clic en el botón INICIAR.</p>
+        <div class="caja">
+            <div class="cont-imagen">
+                <img src="./build/img/contenido/Pag18/persona1.svg" alt="persona">
+            </div>
+            <div class="parrafo">
+                <p>¡Has terminado la primera parte de tu curso PLD!  Veamos cuánto aprendiste. Lee con cuidado cada enunciado que se te presentará y elige si es VERDADERO o FALSO. Si estás listo da clic en el botón INICIAR.</p>
+            </div>
         </div>
         <div class="cont-boton">
-            <a href="#actividad-cuestionario">Iniciar</a>
+            <a id="inicioCuestionario" href="#actividad-cuestionario">Iniciar</a>
         </div>
+    </div>
+
+    <div id="actividad-cuestionario">
     </div>
    
 </body>
