--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -7,157 +7,31 @@
     <title>Página 19</title>
 </head>
 <body>
-    <div class="titulo-verde">
-        <p>
-            En la politica de identificación
-        </p>
-    </div>
-    <div class="contenido2pag19">
-        <figure class="persona1pag19">
-            <img src="./build/img/contenido/Pag19/persona1.svg" alt="persona1">
-        </figure>
-        <div class="rec1pag19">
-            <ul>
-                <li>
-                    Se incorpora la  identificación de compradores  de salvamentos y entidades fiduciarias.
-                </li>
-            </ul>
+    <div id="cont-intro19">
+        <div class="titulo">
+            <p>En la politica de identificación</p>
         </div>
-        <div class="rec2pag19">
-            <ul>
-                <li>
-                    <p>
-                        Verificación de los datos y documentos que nuestros posibles clientes nos proporcionen para acreditar su identidad, podrá realizarse de forma no presencial; igualmente para contrataciones, la entrevista podrá realizarse de forma no presencial. En ambos casos conforme a las disposiciones que al efecto emita la Comisión.
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Contar con medidas para mitigar el alto Riesgo.
-                    </p>
-                </li>
-                <figure class="vinoculares">
-                    <img src="./build/img/contenido/Pag19/vinoculares.svg" alt="">
-                </figure>
-            </ul>
-        </div>
-        <div class="rec3pag19">
-            <ul>
-                <li>
-                    Las Compañías podrán suspender el proceso de  identificación cuando se estime de forma razonable que nuestros posibles clientes se encuentran relacionados con operaciones de lavado de dinero o alguno de los riesgos previstos en el Manual de Cumplimiento PLD/CFT.
-                </li>
-            </ul>
-        </div>
-        <figure class="contenedor2pag19">
-            <figure class="persona2pag19">
-                <img src="./build/img/contenido/Pag19/persona2.svg" alt="persona 2">
-            </figure>
-        </figure>
-    </div>
-    <div class="cuadropag19-naranja">
-        <p>
-            Se adiciona un capítulo de Enfoque Basado en Riesgo.
-        </p>
-    </div>
-    <div class="contenido3pag19">
-        <div class="contenido4pag19">
-            <div class="contenido8pag19">
-                <div class="titulopag19-azul">
-                    <p>
-                        Para implementar:
-                    </p>
-                </div>
-                <div class="cuadropag19-blanco">
-                    <p>
-                        Una metodología de Evaluación de Grado de Riesgos que permita identificar el riesgo de Lavado de Dinero y financiamiento al Terrorismo al que se encuentra expuesta la Compañía. 
-                    </p>
-                </div>
-            </div>
-            <figure class="personapag19-pizarra">
-                <img src="/build/img/contenido/Pag19/persona-pizarra.svg" alt="persona pizarra">
 
-            </figure>
-        </div>
-        <div class="contenido5pag19">
-            <div class="titulopag19-verde">
-                <p>
-                    En la Política de Conocimiento:
-                </p>
+        <div class="tarjetas">
+            <div class="tarjeta" id="tarjeta1">
+                <ul>
+                    <li>Se incorpora la  identificación de compradores  de salvamentos y entidades fiduciarias.</li>
+                </ul>
             </div>
-            <div class="cuadro2pag19-blanco">
-                <div class="globo1pag19">
-                    <p>
-                        En operaciones celebradas de forma no presencial, deberá obtenerse la información relativa a la geolocalización.
-                    </p>
-                </div>
-                <figure class="personapag19-esc">
-                    <img src="/build/img/contenido/Pag19/persona-esc.svg" alt="persona escritorio">
-                </figure>
+            <div class="tarjeta" id="tarjeta2">
+                <ul>
+                    <li>Verificación de los datos y documentos que nuestros posibles clientes nos proporcionen para acreditar su identidad, podrá realizarse de forma no presencial; igualmente para contrataciones, la entrevista podrá realizarse de forma no presencial. En ambos casos conforme a las disposiciones que al efecto emita la Comisión.
+                    </li>
+                    <li>Contar con medidas para mitigar el alto Riesgo.</li>
+                </ul>
             </div>
-            <div class="contenido6pag19">
-                <div class="globo2pag19">
-                    <p>
-                        Se adiciona un riesgo medio entre alto y bajo a la clasificación del grado de riesgo de  los clientes.
-                    </p>
-                </div>
+            <div class="tarjeta" id="tarjeta3">
+                <ul>
+                    <li>Las Compañías podrán suspender el proceso de  identificación cuando se estime de forma razonable 
+                    que nuestros posibles clientes se encuentran relacionados con operaciones de lavado de dinero o alguno de los riesgos previstos en el Manual de Cumplimiento PLD/CFT.
+                    </li>
+                </ul>
             </div>
-        </div>
-    </div>
-    <div class="contenido10pag19">
-        <div class="titulos">
-            <div class="cuadro-naranja">
-                <p>
-                    En Operaciones Relevantes, Inusuales e Internas Preocupantes: 
-                </p>
-            </div>
-            <div class="cuadro-amarillo">
-                <p>
-                    En Estructuras Internas:
-                </p>
-            </div>
-            <div class="cuadro-azul">
-                <p>
-                    En Capacitación y Difusión:
-                </p>
-            </div>
-        </div>
-        <div class="cont-cajas">
-            <div class="cajas">
-                <figure class="cont-imagen">
-                    <img src="/build/img/contenido/Pag19/circulo1.svg" alt="icono billetes">
-                </figure>
-                <div class="cont-parrafo" id="parrafo1">
-                    <p>Ahora las operaciones <b>relevantes</b> se reportarán por un monto igual o superior a <b>$7,500</b> dólares de los Estados Unidos.</p>
-                </div>
-            </div>
-            <div class="cajas">
-                <figure class="cont-imagen">
-                    <img src="/build/img/contenido/Pag19/circulo2.svg" alt="icono calendario">
-                </figure>
-                <div class="cont-parrafo" id="parrafo2">
-                    <p><b>Las operaciones inusuales e internas preocupantes</b>  deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado con ese carácter.</p>
-                </div>
-            </div>
-            <div class="cajas">
-                <figure class="cont-imagen">
-                    <img src="/build/img/contenido/Pag19/circulo3.svg" alt="icono escudo">
-                </figure>
-                <div class="cont-parrafo" id="parrafo3">
-                    <p>Podrá nombrarse a un <b>Oficial de Cumplimiento</b> interino, en caso de ausencia temporal del mismo.</p>
-                </div>
-            </div>
-            <div class="cajas">
-                <figure class="cont-imagen">
-                    <img src="/build/img/contenido/Pag19/circulo4.svg" alt="icono maestro-azul">
-                </figure>
-                <div class="cont-parrafo" id="parrafo4">
-                    <p>La Capacitación deberá ser tomada <b>también por los miembros de los Consejos de Administración.</b></p>
-                </div>
-            </div>
-        </div>
-        <div class="contenido13pag19">
-                <p>
-                    Se adicionan capítulos de Modelos Novedosos de Intercambio de Información entre entidades, así como de Listas de Personas Bloqueadas.
-                </p>
         </div>
     </div>
 </body>
